# uform-coreml-converters

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/uform_coreml_converters/: constants.py  converters.py  model_ane.py  model_fp16.py
src/uform_coreml_converters/cli/: convert.py
